# PurrrfectSpots

./: .gitignore  CMakeLists.txt  README
PurrrfectSpots/: Admins.cpp  CMakeLists.txt  Demo.cpp  Demo.h  MyButton.cpp  MyButton.h  MyDisplayBuffer.cpp  MyDisplayBuffer.h  MyNoteBook.cpp  MyNoteBook.h  MyValue.cpp  MyValue.h  Napspots.cpp  Napspots.h  Reservations.cpp  Reservations.h  Reviews.h  Users.cpp  Users.h  main.cpp  rating_data.txt  your_executable_name
PurrrfectSpots/admin/: Admins.h
PurrrfectSpots/database/: Database.cpp  Database.h  Makefile  NapspotDB.cpp  NapspotDB.h  ReservationDB.cpp  ReservationDB.h  UserDB.cpp  UserDB.h  example.sqlite
PurrrfectSpots/database/sql/: build_tables.sql  drop_tables.sql
PurrrfectSpots/napspot/: NapspotManager.cpp  NapspotManager.h  Napspots.cpp  Napspots.h
PurrrfectSpots/reservation/: ReservationManager.cpp  ReservationManager.h  Reservations.cpp  Reservations.h
PurrrfectSpots/review/: Reviews.cpp
PurrrfectSpots/ui/: MyButton.cpp  MyButton.h  NotebookManager.cpp  NotebookManager.h  Profile.cpp  Profile.h  Rating.cpp  Rating.h  SpotStructure.cpp  SpotStructure.h  slider_style.css
PurrrfectSpots/unit_tests/: DatabaseTest.cpp  DatabaseTest.h  ReservationTests.cpp  ReservationTests.h  SpotTests.cpp  UserDBTests.cpp  UserTests.cpp
PurrrfectSpots/user/: UserAccount.cpp  UserAccount.h  UserManager.cpp  UserManager.h
unit_tests/: Reservations Tests.cpp  ReservationsTests.cpp
